@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -47,6 +47,7 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import static jdk.jpackage.internal.OverridableResource.createResource;
 import static jdk.jpackage.internal.StandardBundlerParam.APP_NAME;
+import static jdk.jpackage.internal.StandardBundlerParam.INSTALLER_NAME;
 import static jdk.jpackage.internal.StandardBundlerParam.VERSION;
 import static jdk.jpackage.internal.StandardBundlerParam.RELEASE;
 import static jdk.jpackage.internal.StandardBundlerParam.VENDOR;
@@ -71,8 +72,7 @@ public class LinuxDebBundler extends LinuxPackageBundler {
             Arguments.CLIOptions.LINUX_BUNDLE_NAME.getId(),
             String.class,
             params -> {
-                String nm = APP_NAME.fetchFrom(params);
-
+                String nm = INSTALLER_NAME.fetchFrom(params);
                 if (nm == null) return null;
 
                 // make sure to lower case and spaces/underscores become dashes
@@ -173,7 +173,7 @@ public class LinuxDebBundler extends LinuxPackageBundler {
     protected List<ToolValidator> getToolValidators(
             Map<String, ? super Object> params) {
         return Stream.of(TOOL_DPKG_DEB, TOOL_DPKG, TOOL_FAKEROOT).map(
-                ToolValidator::new).collect(Collectors.toList());
+                ToolValidator::new).toList();
     }
 
     @Override
