@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -103,7 +103,7 @@ final class OverridableResource {
     OverridableResource setSourceOrder(Source... v) {
         sources = Stream.of(v)
                 .map(source -> Map.entry(source, getHandler(source)))
-                .collect(Collectors.toList());
+                .toList();
         return this;
     }
 
@@ -173,7 +173,7 @@ final class OverridableResource {
 
             @Override
             public void consume(InputStream in) throws IOException {
-                Files.createDirectories(dest.getParent());
+                Files.createDirectories(IOUtils.getParent(dest));
                 Files.copy(in, dest, StandardCopyOption.REPLACE_EXISTING);
             }
         });
